--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -25,3 +25,17 @@
 .navbar-text {
   margin-left: 15px;
 }
+
+
+h2 {
+    text-align: center;
+    margin: 30px 0;
+}
+.demo-card {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto 100px;
+}
+h4.title {
+  text-align: center;
+}
