--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -9,13 +9,32 @@
       </button>
       <a href="/" class="navbar-brand">blackthorn</a>
     </div>
-    <div uib-collapse="nav.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
+    <div uib-collapse="nav.isCollapsed" 
+         class="navbar-collapse collapse" 
+         id="navbar-main">
       <ul class="nav navbar-nav">
-        <li ng-repeat="item in nav.menu" ng-class="{active: nav.isActive(item.link)}">
+        <li ng-repeat="item in nav.menu" 
+            ng-class="{active: nav.isActive(item.link)}">
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
-        <li ng-show="nav.isAdmin()" ng-class="{active: nav.isActive('/admin')}"><a href="/admin">Admin</a></li>
+        <li ng-show="nav.isAdmin()" 
+            ng-class="{active: nav.isActive('/admin')}"><a href="/admin">Admin</a></li>
       </ul>
+
+<!--       <ul class="nav navbar-nav" id="srch-term">
+        <li><form class="navbar-form" role="search">
+          <div class="input-group">
+            <input type="text" 
+                   class="form-control" 
+                   placeholder="Search" 
+                   name="srch-term" 
+                   >
+            <div class="input-group-btn">
+              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+          </div>
+        </form></li>
+      </ul> -->
 
       <ul class="nav navbar-nav navbar-right">
         <li ng-hide="nav.isLoggedIn()" ng-class="{active: nav.isActive('/signup')}"><a href="/signup">Sign up</a></li>
